@@ -145,6 +145,7 @@ PANOPTICON_BTN_ENABLE="Enable"
 PANOPTICON_BTN_DISABLE="Disable"
 PANOPTICON_APP_MENU_TITLE_ADMINISTRATION="Administration"
 PANOPTICON_APP_TEMPLATE_DEFAULT="Panopticon (Default Template)"
+PANOPTICON_APP_LBL_LANGUAGE="Language"
 
 [Task Types]
 PANOPTICON_TASKTYPE_AKEEBABACKUP="Take a backup with Akeeba Backup"
